--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,3 +1,9 @@
 <div>
-  <img src="../../../assets/banner.jpg" alt="" width="100%" />
+  <img src="../../../assets/banner.jpg" alt="" width="100%" class="img-fluid" />
+  <img
+    src="../../../assets/perfil.jpeg"
+    alt=""
+    class="img-fluid"
+    id="imgperfil"
+  />
 </div>
