--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,5 +1,38 @@
-<a
-  href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa"
->
-  <img src="../../../assets/APLogo.png" id="imglogo" alt="" />
-</a>
+<div class="row">
+  <div class="container">
+    <div class="logo">
+      <a
+        href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa"
+      >
+        <img src="../../../assets/APLogo.png" id="imglogo" />
+      </a>
+    </div>
+    <div class="redes">
+      <a href="https://www.linkedin.com/in/yonathangarcia/">
+        <img
+          src="../../../assets/linkedin.png"
+          alt=""
+          width="40px"
+          id="imgredes"
+        />
+      </a>
+      <a href="https://github.com/yonathangarcia">
+        <img
+          src="../../../assets/github.png"
+          alt=""
+          width="40px"
+          id="imgredes"
+        />
+      </a>
+      <a href="https://twitter.com/Yonathan_GL">
+        <img
+          src="../../../assets/twitter.png"
+          alt=""
+          width="40px"
+          id="twitter"
+        />
+      </a>
+      <button type="button" class="btn btn-outline-light">Login</button>
+    </div>
+  </div>
+</div>
