--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-header></app-header> <app-banner></app-banner>
+<app-header></app-header> <app-banner></app-banner> <app-info></app-info>
+<app-experiencia></app-experiencia><app-educacion></app-educacion
+><app-hardysoft></app-hardysoft><app-proyectos></app-proyectos
+><app-footer></app-footer>
