--- a/src/app/components/logo/logo.component.css
+++ b/src/app/components/logo/logo.component.css
@@ -1,3 +1,19 @@
 #imglogo {
-  width: 140px;
+  width: 120px;
+}
+.redes {
+  margin-right: 10px;
+}
+#imgredes {
+  margin-left: 30px;
+}
+#twitter {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.container {
+  background-color: #9ed0e6;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
