--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-header></app-header> <app-banner></app-banner> <app-info></app-info>
-<app-experiencia></app-experiencia><app-educacion></app-educacion
-><app-hardysoft></app-hardysoft><app-proyectos></app-proyectos
-><app-footer></app-footer>
+<router-outlet></router-outlet>
