--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,7 +1,7 @@
 <div class="row" id="divinfo">
   <div class="col-xs-12 col-sm-1 col-md-3 col-lg-3"></div>
   <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-    <h4 id="nombre">Garcia Yonathan Exequiel</h4>
+    <h4 id="nombre">{{ persona.nombre }} {{ persona.apellido }}</h4>
     <p></p>
     <h6>Fullstack Developer Jr.</h6>
   </div>
