--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -32,7 +32,9 @@
           id="twitter"
         />
       </a>
-      <button type="button" class="btn btn-outline-light">Login</button>
+      <button type="button" class="btn btn-outline-light" (click)="login()">
+        Login
+      </button>
     </div>
   </div>
 </div>
