--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,31 +2,55 @@
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card shadow-2-strong" style="border-radius: 1rem">
+        <div class="card bg-light" style="border-radius: 1rem">
           <div class="card-body p-5 text-center">
-            <h3 class="mb-5">Ingresar</h3>
+            <div class="mb-md-5 mt-md-4 pb-5">
+              <h2 class="fw-bold mb-2 text-uppercase mb-5">Login</h2>
 
-            <div class="form-outline mb-4">
-              <input
-                type="email"
-                id="typeEmailX-2"
-                class="form-control form-control-lg"
-              />
-              <label class="form-label" for="typeEmailX-2">Usuario</label>
+              <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+                <div class="form-outline form-white">
+                  <label class="form-label" for="nombreUsuario">Usuario</label>
+                  <input
+                    type="email"
+                    id="nombreUsuario"
+                    name="nombreUsuario"
+                    class="form-control form-control-lg"
+                    [(ngModel)]="nombreUsuario"
+                    required
+                  />
+                </div>
+
+                <div class="form-outline form-white mb-4">
+                  <label class="form-label" for="password">Contraseña</label>
+
+                  <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    class="form-control form-control-lg"
+                    [(ngModel)]="password"
+                    required
+                  />
+                </div>
+
+                <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
+
+                <button class="btn btn-outline-dark btn-lg px-5" type="submit">
+                  Iniciar Sesión
+                </button>
+              </form>
             </div>
 
-            <div class="form-outline mb-4">
-              <input
-                type="password"
-                id="typePasswordX-2"
-                class="form-control form-control-lg"
-              />
-              <label class="form-label" for="typePasswordX-2">Contraseña</label>
-            </div>
+            <div>
+              <p class="text-black-60">
+                Si olvido su usuario o contraseña contacte con el administrador
+              </p>
 
-            <button class="btn btn-primary btn-lg btn-block" type="submit">
-              Login
-            </button>
+              <!--<p class="mb-0">
+                ¿No tienes una cuenta?
+                <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+              </p>-->
+            </div>
           </div>
         </div>
       </div>
