--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -32,8 +32,21 @@
           id="twitter"
         />
       </a>
-      <button type="button" class="btn btn-outline-light" (click)="login()">
-        Login
+      <button
+        type="button"
+        class="btn btn-outline-light"
+        (click)="login()"
+        *ngIf="!isLogged"
+      >
+        LOGIN
+      </button>
+      <button
+        type="button"
+        class="btn btn-outline-light"
+        (click)="onLogOut()"
+        *ngIf="isLogged"
+      >
+        CERRAR SESIÓN
       </button>
     </div>
   </div>
