--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -3,12 +3,18 @@
     <div class="logo">
       <a
         href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa"
+        target="_blank"
+        rel="noopener noreferrer"
       >
         <img src="../../../assets/APLogo.png" id="imglogo" />
       </a>
     </div>
     <div class="redes">
-      <a href="https://www.linkedin.com/in/yonathangarcia/">
+      <a
+        href="https://www.linkedin.com/in/yonathangarcia/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <img
           src="../../../assets/linkedin.png"
           alt=""
@@ -16,7 +22,11 @@
           id="imgredes"
         />
       </a>
-      <a href="https://github.com/yonathangarcia">
+      <a
+        href="https://github.com/yonathangarcia"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <img
           src="../../../assets/github.png"
           alt=""
@@ -24,7 +34,11 @@
           id="imgredes"
         />
       </a>
-      <a href="https://twitter.com/Yonathan_GL">
+      <a
+        href="https://twitter.com/Yonathan_GL"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <img
           src="../../../assets/twitter.png"
           alt=""
@@ -46,7 +60,7 @@
         (click)="onLogOut()"
         *ngIf="isLogged"
       >
-        CERRAR SESIÓN
+        CERRAR SESION
       </button>
     </div>
   </div>
