upload, modify, create n delete options
agregadas las opciones de agregar, cargar, editar y borrar en algunos de los componentes

--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,91 +1,39 @@
 <div class="row">
-  <h1>Educación</h1>
-  <div class="col-lg-1"></div>
-  <div class="col-lg-10">
-    <ul>
-      <li>
-        <h1>educacion 1</h1>
-        -
-        <h3>años</h3>
-      </li>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        excepturi, harum ut quam iure modi voluptatibus. Explicabo expedita
-        asperiores facere odio eius deserunt autem eaque, doloremque unde ipsam
-        doloribus quaerat.
-      </p>
-    </ul>
-    <ul>
-      <li>
-        <h1>educacion 2</h1>
-        -
-        <h3>años</h3>
-      </li>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        excepturi, harum ut quam iure modi voluptatibus. Explicabo expedita
-        asperiores facere odio eius deserunt autem eaque, doloremque unde ipsam
-        doloribus quaerat.
-      </p>
-    </ul>
+  <h1>Educacion</h1>
+  <div class="col-lg-2">
+    <button
+      type="button"
+      class="btn btn-dark"
+      routerLink="/nuevaedu"
+      *ngIf="isLogged"
+    >
+      Agregar Educacion
+    </button>
   </div>
-</div>
 
-<div class="row">
-  <h1>Otros Estudios</h1>
-  <div class="col-lg-1"></div>
-  <div class="col-lg-10">
-    <ul>
-      <li>
-        <h1>estudios 1</h1>
-        -
-        <h3>años</h3>
-      </li>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        excepturi, harum ut quam iure modi voluptatibus. Explicabo expedita
-        asperiores facere odio eius deserunt autem eaque, doloremque unde ipsam
-        doloribus quaerat.
-      </p>
-    </ul>
-    <ul>
-      <li>
-        <h1>estudios 2</h1>
-        -
-        <h3>años</h3>
-      </li>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        excepturi, harum ut quam iure modi voluptatibus. Explicabo expedita
-        asperiores facere odio eius deserunt autem eaque, doloremque unde ipsam
-        doloribus quaerat.
-      </p>
-    </ul>
-    <ul>
-      <li>
-        <h1>estudios 3</h1>
-        -
-        <h3>años</h3>
-      </li>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        excepturi, harum ut quam iure modi voluptatibus. Explicabo expedita
-        asperiores facere odio eius deserunt autem eaque, doloremque unde ipsam
-        doloribus quaerat.
-      </p>
-    </ul>
-    <ul>
-      <li>
-        <h1>estudios 4</h1>
-        -
-        <h3>años</h3>
-      </li>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        excepturi, harum ut quam iure modi voluptatibus. Explicabo expedita
-        asperiores facere odio eius deserunt autem eaque, doloremque unde ipsam
-        doloribus quaerat.
-      </p>
-    </ul>
+  <div class="col-lg-12">
+    <table class="table">
+      <tbody>
+        <tr *ngFor="let Educacion of educacion">
+          <td>
+            <h2>{{ Educacion.nombreE }}</h2>
+          </td>
+          <td>{{ Educacion.descripcionE }}</td>
+          <td *ngIf="isLogged">
+            <button
+              class="btn btn-light"
+              routerLink="/editedu/{{ Educacion.id }}"
+            >
+              <i class="bi bi-pencil-fill"></i> EDITAR
+            </button>
+          </td>
+          <td *ngIf="isLogged">
+            <button class="btn btn-danger" (click)="delete(Educacion.id)">
+              <i class="bi bi-trash-fill"></i> BORRAR
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
