--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,32 +1,40 @@
 <div class="row">
-  <h1>Experiencia Laboral</h1>
-  <div class="col-lg-1"></div>
-  <div class="col-lg-10">
-    <ul>
-      <li>
-        <h1>trabajo 1</h1>
-        -
-        <h3>años</h3>
-      </li>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        excepturi, harum ut quam iure modi voluptatibus. Explicabo expedita
-        asperiores facere odio eius deserunt autem eaque, doloremque unde ipsam
-        doloribus quaerat.
-      </p>
-    </ul>
-    <ul>
-      <li>
-        <h1>trabajo 2</h1>
-        -
-        <h3>años</h3>
-      </li>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        excepturi, harum ut quam iure modi voluptatibus. Explicabo expedita
-        asperiores facere odio eius deserunt autem eaque, doloremque unde ipsam
-        doloribus quaerat.
-      </p>
-    </ul>
+  <h1>Experiencia laboral</h1>
+  <div class="col-lg-2">
+    <button
+      type="button"
+      class="btn btn-dark"
+      routerLink="/nuevaexp"
+      *ngIf="isLogged"
+    >
+      Nueva Experiencia
+    </button>
+  </div>
+
+  <div class="col lg 1"></div>
+  <div class="col-lg-11">
+    <table class="table">
+      <tbody>
+        <tr *ngFor="let Experiencia of expe">
+          <td>
+            <h2>{{ Experiencia.nombreE }}</h2>
+          </td>
+          <td>{{ Experiencia.descripcionE }}</td>
+          <td *ngIf="isLogged">
+            <button
+              class="btn btn-light"
+              routerLink="/editexp/{{ Experiencia.id }}"
+            >
+              <i class="bi bi-pencil-square"></i> EDITAR
+            </button>
+          </td>
+          <td *ngIf="isLogged">
+            <button class="btn btn-danger" (click)="delete(Experiencia.id)">
+              <i class="bi bi-trash-fill"></i> BORRAR
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
