--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,6 +1,9 @@
-div {
+#bkg {
   background-color: #d0ada7;
 }
+/*div {
+  background-color: #d0ada7;
+}*/
 @media (min-width: 576px) {
   #imgperfil {
     margin-top: -13%;
