--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,9 +1,16 @@
-<div>
-  <img src="../../../assets/banner.jpg" alt="" width="100%" class="img-fluid" />
-  <img
-    src="../../../assets/perfil.jpeg"
-    alt=""
-    class="img-fluid"
-    id="imgperfil"
-  />
+<div class="row">
+  <div class="col-12" id="bkg">
+    <img
+      src="../../../assets/banner.jpg"
+      alt=""
+      width="100%"
+      class="img-fluid"
+    />
+    <img
+      src="https://firebasestorage.googleapis.com/v0/b/portfolio-yonathan.appspot.com/o/imagen%2Fperfil_1?alt=media&token=fb06f5db-2e05-4eea-867d-72c415b43ffb"
+      alt=""
+      class="img-fluid"
+      id="imgperfil"
+    />
+  </div>
 </div>
