--- a/src/app/components/hys/hys.component.html
+++ b/src/app/components/hys/hys.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <h1>Hard & Soft Skills</h1>
-  <div class="col-lg-2">
+  <div class="col-lg-2 col-xl-2">
     <button
       type="button"
       routerLink="/newskill"
@@ -10,8 +10,9 @@
       Nueva Skill
     </button>
   </div>
+  <div class="col-lg-10 col-xl-10"></div>
   <div
-    class="text-center col-sm-4 col-md-4 col-lg-4 circulo"
+    class="text-center col-sm-4 col-md-4 col-lg-4 col-xl-4 circulo"
     *ngFor="let skill of skill"
   >
     <circle-progress
