final build firebase

--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -6,10 +6,13 @@
     >
       <h3>Portfolio Argentina Programa</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-        assumenda tempore veritatis inventore ab quae ratione qui repellendus,
-        esse totam expedita at dolorem itaque tenetur ipsum ad dignissimos quas
-        accusantium.
+        Pagina de Portfolio web, es la entrega final de proyecto de fin de curso
+        de Argentina Programa, en el mismo utilicé CSS y HTML, JWT para el
+        login, ademas de php, TypeScript para la edición de los componentes,
+        contruido en NodeJs con angular, firebase para el deploy del frontend,
+        Java en el backend, MySQL para la base de datos que almacena la
+        informacion mostrada en cada componente editable e intente hacerlo
+        reponsive para su visualización en dispositivos móviles.
       </p>
     </div>
     <div
